[gd_scene load_steps=8 format=3 uid="uid://sg5fl8y6cfuh"]

[ext_resource type="Script" uid="uid://i08ubpop6pw0" path="res://Components/Plate/plate.gd" id="1_0jeug"]
[ext_resource type="Texture2D" uid="uid://c1u662rhhrkum" path="res://art/items/02_dish_2.png" id="2_2qq08"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wriwh"]
bg_color = Color(0.47843137, 0.8156863, 0.3529412, 0.9529412)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Curve" id="Curve_c00dj"]
_data = [Vector2(0.705, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_h0vwa"]
curve = SubResource("Curve_c00dj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_omkvx"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 15.0
initial_velocity_max = 25.0
gravity = Vector3(0, 0, 0)
damping_min = 1.0
damping_max = 1.0
scale_min = 2.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_h0vwa")
color = Color(0.4563535, 0.8821437, 0.030994663, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jeug"]

[node name="Plate" type="Node2D"]
scale = Vector2(1.25, 1)
script = ExtResource("1_0jeug")

[node name="AvailablePanel" type="Panel" parent="."]
visible = false
offset_left = -29.0
offset_top = -27.0
offset_right = 30.0
offset_bottom = 27.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wriwh")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
visible = false
amount = 250
lifetime = 2.0
preprocess = 2.0
local_coords = true
process_material = SubResource("ParticleProcessMaterial_omkvx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.5551419, 1.5551419)
texture = ExtResource("2_2qq08")

[node name="FoodLayouts" type="Node2D" parent="."]

[node name="OneFoodLayOut" type="Node2D" parent="FoodLayouts"]

[node name="First" type="Marker2D" parent="FoodLayouts/OneFoodLayOut"]

[node name="TwoFoodLayOut" type="Node2D" parent="FoodLayouts"]

[node name="First" type="Marker2D" parent="FoodLayouts/TwoFoodLayOut"]
position = Vector2(-7, -11)

[node name="Second" type="Marker2D" parent="FoodLayouts/TwoFoodLayOut"]
position = Vector2(9, 5)

[node name="ThreeFoodLayOut" type="Node2D" parent="FoodLayouts"]

[node name="First" type="Marker2D" parent="FoodLayouts/ThreeFoodLayOut"]
position = Vector2(0, -16)

[node name="Second" type="Marker2D" parent="FoodLayouts/ThreeFoodLayOut"]
position = Vector2(12, 6)

[node name="Third" type="Marker2D" parent="FoodLayouts/ThreeFoodLayOut"]
position = Vector2(-14, 0)

[node name="FourFoodLayOut" type="Node2D" parent="FoodLayouts"]

[node name="First" type="Marker2D" parent="FoodLayouts/FourFoodLayOut"]
position = Vector2(-6, -13)

[node name="Second" type="Marker2D" parent="FoodLayouts/FourFoodLayOut"]
position = Vector2(13, -7)

[node name="Third" type="Marker2D" parent="FoodLayouts/FourFoodLayOut"]
position = Vector2(-13, 1)

[node name="Fourth" type="Marker2D" parent="FoodLayouts/FourFoodLayOut"]
position = Vector2(8, 8)

[node name="PlateArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlateArea"]
scale = Vector2(2.8903184, 2.8903184)
shape = SubResource("RectangleShape2D_0jeug")

[connection signal="mouse_entered" from="AvailablePanel" to="." method="_on_available_panel_mouse_entered"]
[connection signal="mouse_exited" from="AvailablePanel" to="." method="_on_available_panel_mouse_exited"]
